--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
         <div class="destination-container">
             <div class="destination" id="belize">
                 <h2>Belize</h2>
+                <br>
             </div>
 
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
+            </div>
+            
+            <div class="destination">
+                <h2>Ushuaia</h2>
             </div>
         </div>
     </div>
